# aexgym

./: .gitignore  LICENSE  README.md  constraints.py  environment.yml  pyproject.toml
aexgym/: __init__.py
aexgym/agent/: __init__.py
aexgym/core/: __init__.py  model.py  rules.py  runner.py  state.py
aexgym/env/: __init__.py  base_env.py  dow_env.py  pers_env.py  ranking_env.py
aexgym/experiments/: __init__.py  guardrail_basic.py  paper_scalar_compare.py  paper_scalar_replication.py  paper_scalar_variant_check.py  scalar_parity.py
aexgym/legacy_parity/: __init__.py  compare_adaptive.py  scalar_replication.py  variant_check.py
aexgym/metric/: __init__.py  model.py  policies.py  rho.py  rules.py  runner.py  state.py
aexgym/model/: __init__.py  base_model.py  model_utils.py  pers_ranking_model.py  personalized_linear_model.py  treatment_linear_model.py
aexgym/objectives/: __init__.py  regret.py
aexgym/policies/: __init__.py  rho.py  standard.py
data/: asos_digital_experiments_dataset.csv
notebooks/: empirical_mean_rho_demo.ipynb
notebooks/asos/: asos.ipynb  make_asos_env.py
notebooks/meager_nhis/: cluster_env.py  meager_simulation.ipynb  nhis_simulation.ipynb  process_meager.py  process_nhis.py
notebooks/mind/: mind.ipynb  process_mind.py
notebooks/pennui/: penn_env.py  penn_simulation.ipynb  process_penn.py
notebooks/synthetic/: personalize_constraints.ipynb  personalize_linear.ipynb  personalize_ranking.ipynb  (+1 more)
results/: linear_n_days_dict_10.json  linear_simple_cumul_dict_5.json  n_arms_dict_5.json  n_days_dict_10.json  n_days_dict_1_items.json  n_items_dict_5.json  simple_cumul_dict_5_10.json  simple_cumul_dict_reward_5_10.json
scripts/: lr_search.py  mixscript.sh  script.py  setup_script.py
tests/: conftest.py  test_metric_experiments.py  test_metric_model.py  test_metric_policies.py  test_metric_rho.py  test_metric_rules.py  test_package_layout.py  test_paper_parity.py  test_paper_scalar_replication.py  test_revision_plotting.py
(+26 files in other folders)
