[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aexgym"
version = "0.1.0"
description = "Benchmarks and environments for adaptive experimentation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-learn",
  "statsmodels",
  "torch",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel",
  "jupyterlab",
]
scripts = [
  "hydra-core",
  "omegaconf",
  "tqdm",
]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["aexgym*"]
