[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aexgym"
version = "0.1.0"
description = "Paper-focused adaptive experimentation package for Gaussian metric experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "scipy",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["aexgym*"]
